--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="0xc4t">
     <meta property="og:description" content="Web Security & Active Directory Security">
     <meta property="og:site_name" content="0xc4t">
-    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1960719102932344837/T8Sl7V0i_400x400.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/0xc4t/0xc4t.github.io/refs/heads/main/icons.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
